[profile.release]
overflow-checks = false
strip = "debuginfo"
panic = "abort"
debug = false
lto = true

[workspace]
resolver = "2"
members = [
    "cli",
    "tests",
    "turn",
    "stun",
    "turn-server",
    "turn-balance",
    "driver"
]

[workspace.dependencies]
tonic-build = "0.10"
prost-build = "0.12"
